--- a/templates/hbd.html
+++ b/templates/hbd.html
@@ -66,7 +66,7 @@
         </div>
     
         <p class="text-xl md:text-2xl text-gray-700 mb-10 animate__animated animate__fadeInUp animate__delay-1s">
-            Semoga hari spesialmu penuh dengan kebahagiaan, tawa, dan banyak kue! 🎉
+            Semoga hari spesialmu penuh dengan kebahagiaan, tawa, dan banyak kue! Amiinnn!!🎉
         </p>
     
         <div class="mb-10 animate__animated animate__tada animate__infinite animate__slower">
